tests/NormalTests/paczka1/fuzzy1/46520491.err
Error in line 2: gybfq A787 72,9
Error in line 8: gybfq S291 264,76
Error in line 6: gybfq S291 59,2
Error in line 4: A787 S42 45,9
Error in line 40: XTCw S291 -1,5
